--- a/product-preview-card-component/style.css
+++ b/product-preview-card-component/style.css
@@ -50,14 +50,10 @@ body {
   padding: 3.2rem;
 }
 
-p {
-  margin-bottom: 3rem;
-}
-
 .sub-heading {
   text-transform: uppercase;
   letter-spacing: 0.3rem;
-  margin-bottom: 1.8rem;
+  margin-bottom: 1.6rem;
 }
 
 .product-title {
@@ -66,6 +62,7 @@ p {
   font-weight: 700;
   color: var(--dark-grey);
   line-height: 1;
+  margin-bottom: 2rem;
 }
 
 .product-img {
@@ -86,6 +83,11 @@ p {
   display: flex;
   align-items: center;
   gap: 2.4rem;
+}
+
+.product-description,
+.product-price {
+  margin-bottom: 3.4rem;
 }
 
 .price-discount {
