--- a/interactive-rating-component/css/style.css
+++ b/interactive-rating-component/css/style.css
@@ -14,6 +14,8 @@
   --very-dark-grey: rgb(18, 20, 23);
 
   --radius: 2.5rem;
+
+  --bubble-size: 5rem;
 }
 
 html {
@@ -52,8 +54,8 @@ body {
   align-items: center;
   justify-content: center;
   background-color: var(--medium-dark-grey);
-  width: 5rem;
-  height: 5rem;
+  width: var(--bubble-size);
+  height: var(--bubble-size);
   border-radius: 50%;
 }
 
@@ -72,8 +74,8 @@ body {
 
 .rating {
   background-color: var(--medium-dark-grey);
-  width: 5rem;
-  height: 5rem;
+  width: var(--bubble-size);
+  height: var(--bubble-size);
   border-radius: 50%;
   font-size: 1.6rem;
 }
@@ -82,8 +84,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 5rem;
-  height: 5rem;
+  width: var(--bubble-size);
+  height: var(--bubble-size);
   font-family: sans-serif;
 }
 
@@ -97,4 +99,32 @@ body {
   font-weight: 700;
   letter-spacing: 0.2rem;
   color: var(--white);
+}
+
+/* 425px */
+@media (max-width: 26.5625em) {
+  :root {
+    --bubble-size: 4rem;
+  }
+
+  body {
+    font-size: 1.4rem;
+  }
+
+  .mb-m {
+    margin-bottom: 1.6rem;
+  }
+
+  .mb-l {
+    margin-bottom: 2.4rem;
+  }
+
+  .rating-container {
+    padding: 2.5rem;
+    max-width: 32.5rem;
+  }
+
+  .rating-title {
+    font-size: 2.4rem;
+  }
 }
