--- a/qr-code-component/style.css
+++ b/qr-code-component/style.css
@@ -18,12 +18,6 @@ html {
 
 body {
   background-color: var(--light-grey);
-  min-height: 100vh;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
   font-family: "Outfit", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -33,22 +27,31 @@ body {
 }
 
 .container {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
   background-color: var(--white);
   max-width: 32rem;
   border-radius: 1.6rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1.6rem;
   padding: 1.6rem 1.6rem 3.2rem 1.6rem;
+  box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.1);
 }
 
 .img-qr {
   width: 100%;
-  border-radius: 1.6rem;
+  margin-bottom: 2.4rem;
+  border-radius: 1rem;
 }
 
 .main-text {
+  margin-bottom: 1.6rem;
   padding: 0 1.6rem;
   font-weight: 700;
   font-size: 2.3rem;
@@ -56,6 +59,7 @@ body {
 }
 
 .sub-text {
+  margin-bottom: 0.8rem;
   padding: 0 1.6rem;
   font-weight: 400;
   font-size: 1.5rem;
