--- a/recipe-page/css/main.css
+++ b/recipe-page/css/main.css
@@ -65,7 +65,7 @@ body {
 }
 
 .recipe-img {
-  height: 30rem;
+  width: 100%;
   border-radius: var(--s);
   margin-bottom: var(--xxl);
 }
@@ -101,8 +101,12 @@ ol {
   display: flex;
   flex-direction: column;
   gap: var(--xxs);
-  list-style-position: inside;
-  margin-left: var(--xxs);
+  list-style-position: outside;
+  margin-left: var(--l);
+}
+
+li {
+  padding-inline-start: 1ch;
 }
 
 li::marker {
@@ -137,10 +141,6 @@ li::marker {
   color: var(--color-dark-raspberry);
 }
 
-.recipe-section-prep li span {
-  margin-left: var(--xxs);
-}
-
 .recipe-section-ingredients {
   margin-bottom: var(--xl);
 }
@@ -149,28 +149,13 @@ li::marker {
   color: var(--color-brandy-red);
 }
 
-.recipe-section-ingredients li span {
-  margin-left: var(--xxs);
-}
-
 .recipe-section-instructions {
   margin-bottom: var(--xl);
 }
 
-.recipe-section-instructions ol {
-  list-style: none;
-}
-
-.recipe-section-instructions li {
-  display: flex;
-  gap: var(--m);
-}
-
-.recipe-section-instructions li .marker {
-  font-weight: var(--bold);
+.recipe-section-instructions li::marker {
   color: var(--color-brandy-red);
-  display: block;
-  min-width: var(--m);
+  font-weight: var(--bold);
 }
 
 .recipe-section-nutrition p {
