--- a/meet-landing-page/css/main.css
+++ b/meet-landing-page/css/main.css
@@ -16,6 +16,7 @@
   --space-lg: calc(2 * var(--space-unit));
   --space-xl: calc(3.25 * var(--space-unit));
   --space-xxl: calc(5.25 * var(--space-unit));
+  --space-xxxl: calc(8.5 * var(--space-unit));
 }
 
 @font-face {
@@ -46,25 +47,15 @@ body {
   color: var(--color-black);
 }
 
-.section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-
-.logo {
-  margin-top: var(--space-xl);
-  margin-bottom: var(--space-xl);
-}
-
 h1 {
+  max-width: 10ch;
   margin-bottom: var(--space-xs);
   font-size: clamp(4rem, 3.3rem + 2.1vi, 6.4rem);
   line-height: 1;
 }
 
 h2 {
+  max-width: 16ch;
   margin-bottom: var(--space-xs);
   font-size: clamp(3.2rem, 3rem + 0.7vi, 4rem);
   line-height: 1.1;
@@ -87,8 +78,21 @@ p {
   color: var(--color-grey);
 }
 
+.logo {
+  margin-top: var(--space-xl);
+  margin-bottom: var(--space-xl);
+}
+
 .section {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.section--1 {
+  overflow-x: hidden;
 }
 
 .section--2 {
@@ -101,11 +105,12 @@ p {
 
 .section--3 {
   padding: var(--space-xxl) 0;
+  --url: url(../images/image-footer-mobile.jpg);
   background-image: linear-gradient(
       rgba(77, 150, 169, 0.8),
       rgba(77, 150, 169, 0.8)
     ),
-    url(../images/image-footer-mobile.jpg);
+    var(--url);
   background-size: cover;
   color: var(--color-white);
 }
@@ -119,8 +124,15 @@ p {
   width: 110%;
 }
 
+.hero-left,
+.hero-right {
+  display: none;
+}
+
 .content {
-  width: clamp(24rem, 16.1rem + 26.3vi, 54rem);
+  width: clamp(29rem, 20.2rem + 23.5vi, 54rem);
+  display: grid;
+  justify-items: center;
 }
 
 .btns {
@@ -148,6 +160,14 @@ p {
 
 .btn--primary .accent {
   color: var(--color--light-teal);
+}
+
+.btn:hover {
+  cursor: pointer;
+}
+
+.btn:hover {
+  opacity: 70%;
 }
 
 .divider {
@@ -193,4 +213,58 @@ p {
 .gallery--img {
   width: clamp(16.4rem, 13.2rem + 8.5vi, 25.5rem);
   border-radius: 1rem;
+}
+
+@media (min-width: calc(600em / 16)) {
+  .section--3 {
+    --url: url(../images/image-footer-tablet.jpg);
+  }
+}
+
+@media (min-width: calc(900em / 16)) {
+  .hero {
+    display: none;
+  }
+
+  .banner {
+    display: grid;
+    gap: var(--space-xl);
+    grid-template-columns: 1fr auto 1fr;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .hero-left,
+  .hero-right {
+    width: 110%;
+    display: block;
+  }
+
+  .hero-left {
+    justify-self: end;
+  }
+
+  .hero-right {
+    justify-self: start;
+  }
+
+  .section--3 {
+    padding: var(--space-xxxl) 0;
+    --url: url(../images/image-footer-desktop.jpg);
+  }
+
+  .content--3 {
+    max-width: 120rem;
+    width: 80%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: var(--space-xxl);
+    align-items: center;
+    justify-items: start;
+    text-align: start;
+  }
+
+  .content--3 > * {
+    margin-bottom: 0;
+  }
 }
