--- a/meet-landing-page/css/main.css
+++ b/meet-landing-page/css/main.css
@@ -6,7 +6,8 @@
   --color-black: #28283d;
   --color-grey: #87879d;
   --color-light-grey: rgba(135, 135, 157, 0.25);
-  --color-white: #fafafa;
+  --color-white: #ffffff;
+  --color-dark-white: #fafafa;
 
   --space-unit: 1.6em;
   --space-xxs: calc(0.25 * var(--space-unit));
@@ -47,6 +48,10 @@ body {
   color: var(--color-black);
 }
 
+main {
+  background-color: var(--color-dark-white);
+}
+
 h1 {
   max-width: 10ch;
   margin-bottom: var(--space-xs);
@@ -59,15 +64,6 @@ h2 {
   margin-bottom: var(--space-xs);
   font-size: clamp(3.2rem, 3rem + 0.7vi, 4rem);
   line-height: 1.1;
-}
-
-h3 {
-  margin-bottom: var(--space-sm);
-  font-size: 1.6rem;
-  line-height: 1.625;
-  letter-spacing: 0.4rem;
-  text-transform: uppercase;
-  color: var(--color-teal);
 }
 
 p {
@@ -188,7 +184,7 @@ p {
   height: var(--space-lg);
   border: 1px solid var(--color-light-grey);
   border-radius: 50%;
-  background-color: white;
+  background-color: var(--color-dark-white);
   padding: 0.56rem;
   font-size: 1.6rem;
   line-height: 1.6rem;
@@ -215,13 +211,40 @@ p {
   border-radius: 1rem;
 }
 
+.tagline {
+  margin-bottom: var(--space-sm);
+  font-size: 1.6rem;
+  font-weight: 900;
+  line-height: 1.625;
+  letter-spacing: 0.4rem;
+  text-transform: uppercase;
+  color: var(--color-teal);
+}
+
 @media (min-width: calc(600em / 16)) {
   .section--3 {
     --url: url(../images/image-footer-tablet.jpg);
   }
+
+  .logo {
+    margin-top: var(--space-xxl);
+    margin-bottom: var(--space-xxl);
+  }
+
+  .btns {
+    margin-bottom: var(--space-xxl);
+  }
+
+  .gallery {
+    margin-bottom: var(--space-xxl);
+  }
 }
 
 @media (min-width: calc(900em / 16)) {
+  .btns {
+    margin-bottom: var(--space-xxxl);
+  }
+
   .hero {
     display: none;
   }
