--- a/time-tracking-dashboard/css/media.css
+++ b/time-tracking-dashboard/css/media.css
@@ -19,11 +19,14 @@
     z-index: 1;
     position: static;
     grid-area: report;
+    display: flex;
+    flex-direction: column;
   }
 
   .subject {
     gap: var(--space-xxl);
     flex-direction: column;
+    flex-grow: 1;
   }
 
   .img__border {
@@ -53,7 +56,6 @@
   }
 
   .time-frame {
-    cursor: pointer;
     padding: 0;
     justify-content: flex-start;
   }
