--- a/password-generator-app/style.css
+++ b/password-generator-app/style.css
@@ -1,5 +1,7 @@
 :root {
   --color-primary: #a4ffaf;
+  --color-primary-shadow-20: rgba(164, 255, 175, 0.2);
+  --color-primary-shadow-40: rgba(164, 255, 175, 0.4);
   --color-neutral-xd: #18171f;
   --color-neutral-d: #24232c;
   --color-neutral: #817d92;
@@ -31,6 +33,8 @@
   --line-height-sm: 2.4rem;
   --line-height-md: 3.2rem;
   --line-height-lg: 4.8rem;
+
+  --max-width: 54rem;
 }
 
 @font-face {
@@ -67,7 +71,7 @@ body {
 
 .main-container {
   margin: var(--space-xxxxl) var(--space-sm) var(--space-xxxxl) var(--space-sm);
-  max-width: 54rem;
+  max-width: var(--max-width);
   font-family: jetbrains-mono-bold, monospace;
   font-size: var(--font-size-xs);
   line-height: 1;
@@ -130,9 +134,44 @@ body {
 
 #input-length {
   grid-column: span 2;
-  /* https://css-tricks.com/sliding-nightmare-understanding-range-input/ */
+}
+
+input[type="range"] {
   appearance: none;
+  cursor: pointer;
+  outline: none;
+  height: 0.8rem;
   background: var(--color-neutral-xd);
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  appearance: none;
+  height: 2.8rem;
+  width: 2.8rem;
+  background-color: var(--color-neutral-l);
+  border: 0.2rem solid var(--color-neutral-l);
+  border-radius: 50%;
+  transition: 0.3s ease-in-out;
+}
+
+input[type="range"]::-webkit-slider-thumb:hover,
+input[type="range"]:active::-webkit-slider-thumb {
+  background-color: var(--color-neutral-xd);
+  border: 0.2rem solid var(--color-primary);
+}
+
+input[type="range"]::-moz-range-thumb {
+  appearance: none;
+  height: 2.8rem;
+  width: 2.8rem;
+  background-color: var(--color-neutral-l);
+  border-radius: 50%;
+}
+
+input[type="range"]:active::-moz-range-thumb,
+input[type="range"]::-moz-range-thumb:hover {
+  background-color: var(--color-neutral-xd);
+  border: 0.2rem solid var(--color-primary);
 }
 
 .input-checkboxes {
